# algds2024

lab1/: CMakeLists.txt  NumberOfRoutes.c  NumberOfRoutes.h  README.md  main.c  tests.cpp
lab2/: CMakeLists.txt  README.md  tests.cpp  treap.c  treap.h
